--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 streamlit==1.33.0
-pandas
-numpy
-scikit-learn
-tensorflow
-matplotlib
-seaborn
-shap
-streamlit-lottie
+pandas==2.1.4
+numpy==1.24.4
+scikit-learn==1.3.2
+tensorflow==2.12.0
+matplotlib==3.7.2
+seaborn==0.12.2
+shap==0.41.0
+streamlit-lottie==0.0.5
